--- a/Jenkins_Jobs/Dockerfile.txt
+++ b/Jenkins_Jobs/Dockerfile.txt
@@ -2,7 +2,7 @@
 From tomcat:latest
 
 # Maintainer
-MAINTAINER "ItResolveIt" 
+MAINTAINER "Tim tchouamou" 
 
 # copy war file on to default location container 
 COPY ./webapp.war /usr/local/tomcat/webapps
